--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "offinso",
+  "description": "a really cool app",
+  "version": "1.0.0",
+  "engines": {
+    "node": "16.x"
+  },
   "devDependencies": {
     "lint-staged": "^13.0.3"
   },
