--- a/.gitattributes
+++ b/.gitattributes
@@ -6,4 +6,4 @@ db/schema.rb linguist-generated
 # Mark any vendored files as having been vendored.
 vendor/* linguist-vendored
 
-*.html linguist-detectable=false
+.html linguist-language=Ruby
