--- a/.gitattributes
+++ b/.gitattributes
@@ -6,4 +6,7 @@ db/schema.rb linguist-generated
 # Mark any vendored files as having been vendored.
 vendor/* linguist-vendored
 
-.html linguist-language=Ruby
+# .html linguist-language=Ruby
+*.html linguist-detectable=false
+*.css linguist-detectable=false
+*.ruby linguist-detectable=true
