--- a/.gitattributes
+++ b/.gitattributes
@@ -4,9 +4,8 @@
 db/schema.rb linguist-generated
 
 # Mark any vendored files as having been vendored.
-vendor/* linguist-vendored
+# vendor/* linguist-vendored
 
-# .html linguist-language=Ruby
 *.html linguist-detectable=false
 *.css linguist-detectable=false
 *.ruby linguist-detectable=true
